name:                   lambdabot-novelty-plugins
version:                5.3.1.1

license:                GPL
license-file:           LICENSE

author:                 Don Stewart
maintainer:             Naïm Favier <n@monade.li>

category:               Development, Web
synopsis:               Novelty plugins for Lambdabot
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        Provided plugins:
                        .
                        [bf] Run Brainf*ck code.
                        .
                        [dice] Roll some dice.
                        .
                        [elite] zPEak Gib8erI$|-|.
                        .
                        [filter] More gibberish.
                        .
                        [numberwang] Sorry, that's not Numberwang.
                        .
                        [quote] Parrot profound wisdom.
                        .
                        [slap] Delegate punishment.
                        .
                        [unlambda] Run Unlambda code.
                        .
                        [vixen] Let's chat, honey.

homepage:               https://wiki.haskell.org/Lambdabot

build-type:             Simple
cabal-version:          >= 1.10
tested-with:            GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.4, GHC == 9.0.2, GHC == 9.2.4, GHC == 9.4.5

source-repository head
  type:                 git
  location:             https://github.com/lambdabot/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -funbox-strict-fields
  default-language:     Haskell98

  exposed-modules:      Lambdabot.Plugin.Novelty
  other-modules:        Lambdabot.Config.Novelty
                        Lambdabot.Plugin.Novelty.BF
                        Lambdabot.Plugin.Novelty.Dice
                        Lambdabot.Plugin.Novelty.Elite
                        Lambdabot.Plugin.Novelty.Filter
                        Lambdabot.Plugin.Novelty.Numberwang
                        Lambdabot.Plugin.Novelty.Quote
                        Lambdabot.Plugin.Novelty.Slap
                        Lambdabot.Plugin.Novelty.Unlambda
                        Lambdabot.Plugin.Novelty.Vixen

  other-modules:        Lambdabot.Util.Process

  build-depends:        base                    >= 4.4 && < 5,
                        binary                  >= 0.5,
                        bytestring              >= 0.9,
                        containers              >= 0.4,
                        dice                    >= 0.1,
                        directory               >= 1.1,
                        lambdabot-core          >= 5.3 && < 5.4,
                        misfortune              >= 0.1,
                        process                 >= 1.1,
                        random                  >= 1.2,
                        random-fu               >= 0.3.0.0,
                        regex-tdfa              >= 1.1,

                        -- runtime dependencies
                        brainfuck               >= 0.1,
                        unlambda                >= 0.1
