name:                   lambdabot-reference-plugins
version:                5.0

license:                GPL
license-file:           LICENSE

author:                 Don Stewart
maintainer:             James Cook <mokus@deepbondi.net>

category:               Development, Web
synopsis:               Lambdabot is a development tool and advanced IRC bot
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        It operates as a command line tool, embedded in an editor,
                        embedded in GHCi, via internet relay chat and on the web.

homepage:               http://haskell.org/haskellwiki/Lambdabot

build-type:             Simple
cabal-version:          >= 1.8
tested-with:            GHC==7.4.1, GHC == 7.6.3

source-repository head
  type:                 git
  location:             https://github.com/mokus0/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -funbox-strict-fields

  exposed-modules:      Lambdabot.Plugin.Reference
                        Lambdabot.Util.Browser
  other-modules:        Lambdabot.Plugin.Reference.Dict
                        Lambdabot.Plugin.Reference.OEIS
                        Lambdabot.Plugin.Reference.Search
                        Lambdabot.Plugin.Reference.Spell
                        Lambdabot.Plugin.Reference.Ticker
                        Lambdabot.Plugin.Reference.Url
                        Lambdabot.Plugin.Reference.Where

  other-modules:        Lambdabot.Config.Reference
                        Lambdabot.Plugin.Reference.Dict.DictLookup

  build-depends:        base                    >= 4.4,
                        bytestring              >= 0.9,
                        containers              >= 0.4,
                        HTTP                    >= 4000,
                        lambdabot-core          >= 5,
                        mtl                     >= 2,
                        network                 >= 2.3.0.13,
                        oeis                    >= 0.3.1,
                        process                 >= 1.1,
                        regex-tdfa              >= 1.1,
                        split                   >= 0.2,
                        tagsoup                 >= 0.12,
                        utf8-string             >= 0.3
