name:                   lambdabot-reference-plugins
version:                5.3.1.2

license:                GPL
license-file:           LICENSE

author:                 Don Stewart
maintainer:             Naïm Favier <n@monade.li>

category:               Development, Web
synopsis:               Lambdabot reference plugins.
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        Provided plugins:
                        .
                        [dict] Query various dictionaries.
                        .
                        [metar] Look up avian weather reports.
                        .
                        [oeis] Look up number sequences on OEIS.
                        .
                        [search] Query search engines.
                        .
                        [spell] Check spelling of wrods.
                        .
                        [ticker] Look up stock quotes.
                        .
                        [url] Display titles of URLs on channels.
                        .
                        [where] Manage and query a key-URL list.

homepage:               https://wiki.haskell.org/Lambdabot

build-type:             Simple
cabal-version:          >= 1.10
tested-with:            GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.4, GHC == 9.0.2, GHC == 9.2.4, GHC == 9.4.5, GHC == 9.6.3

source-repository head
  type:                 git
  location:             https://github.com/lambdabot/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -funbox-strict-fields
  default-language:     Haskell98

  exposed-modules:      Lambdabot.Plugin.Reference
                        Lambdabot.Util.Browser
  other-modules:        Lambdabot.Plugin.Reference.Dict
                        Lambdabot.Plugin.Reference.Metar
                        Lambdabot.Plugin.Reference.OEIS
                        Lambdabot.Plugin.Reference.Search
                        Lambdabot.Plugin.Reference.Spell
                        Lambdabot.Plugin.Reference.Ticker
                        Lambdabot.Plugin.Reference.Url
                        Lambdabot.Plugin.Reference.Where

  other-modules:        Lambdabot.Config.Reference
                        Lambdabot.Plugin.Reference.Dict.DictLookup

  build-depends:        base                    >= 4.4 && < 5,
                        bytestring              >= 0.9,
                        containers              >= 0.4,
                        HTTP                    >= 4000,
                        lambdabot-core          >= 5.3 && < 5.4,
                        mtl                     >= 2,
                        network                 >= 2.7 && < 3.2,
                        network-uri             >= 2.6 && < 2.7,
                        oeis                    >= 0.3.1,
                        process                 >= 1.1,
                        regex-tdfa              >= 1.1,
                        split                   >= 0.2,
                        tagsoup                 >= 0.12,
                        utf8-string             >= 0.3
