name:                   lambdabot-trusted
version:                5.0.2

license:                GPL
license-file:           LICENSE

author:                 Bertram Felgenhauer
maintainer:             Bertram Felgenhauer <int-e@gmx.de>

category:               Development, Web
synopsis:               Lambdabot trusted code.
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        This small package provides functions used by
                        the \@run command.

homepage:               http://haskell.org/haskellwiki/Lambdabot

build-type:             Simple
cabal-version:          >= 1.8
tested-with:            GHC == 7.6.3, GHC == 7.8.3

source-repository head
  type:                 git
  location:             https://github.com/lambdabot/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -funbox-strict-fields

  exposed-modules:      Lambdabot.Plugin.Haskell.Eval.Trusted

  other-modules:        Lambdabot.Plugin.Haskell.Check.ShowQ

  build-depends:        base                    >= 4.4 && < 5,
                        oeis                    >= 0.3.1,
                        QuickCheck-safe         >= 0.1,
                        QuickCheck              >= 2
