name:                   lambdabot-trusted
version:                5.1.0.4

license:                GPL
license-file:           LICENSE

author:                 Bertram Felgenhauer
maintainer:             Bertram Felgenhauer <int-e@gmx.de>

category:               Development, Web
synopsis:               Lambdabot trusted code.
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        This small package provides functions used by
                        the \@run command.

homepage:               https://wiki.haskell.org/Lambdabot

build-type:             Simple
cabal-version:          >= 1.8
tested-with:            GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.1

source-repository head
  type:                 git
  location:             https://github.com/lambdabot/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -funbox-strict-fields

  exposed-modules:      Lambdabot.Plugin.Haskell.Eval.Trusted

  other-modules:        Lambdabot.Plugin.Haskell.Check.ShowQ

  build-depends:        base                    >= 4.4 && < 5,
                        oeis                    >= 0.3.1,
                        QuickCheck-safe         >= 0.1,
                        QuickCheck              >= 2
