Name:                lambdabot-utils
Version:             4.2.2
License:             GPL
License-file:        LICENSE
Author:              Don Stewart
Maintainer:          Cale Gibbard <cgibbard@gmail.com>
Category:            Development, Web
Synopsis:            Utility libraries for the advanced IRC bot, Lambdabot
Description:         Lambdabot is an IRC bot written over several years by
                     those on the #haskell IRC channel.
                     .
                     Our own custom libraries for various plugin functions.
                     .
                     AltTime.hs: alternate version of the time library
                     .
                     MiniHTTP.hs: a mini http server
                     .
                     Process.hs: a wrapper over System.Process
                     .
                     Regex.hsc: a fast packed string regex library
                     .
                     Serial.hs:: a serialisation API
                     .
                     Util.hs: miscellaneous string, and other, functions
cabal-version:       >= 1.6
build-type:          Simple
tested-with:         GHC==6.12.1

source-repository head
  type:     darcs
  location: http://code.haskell.org/lambdabot

Library
    Build-depends:   base >= 4 && < 5, haskell-src, containers, zlib, bytestring, mtl, syb,
                     regex-compat, regex-posix, process, network, old-time, binary, unix, random, tagsoup>0.6, utf8-string
    Exposed-modules: Lambdabot.FixPrecedence, Lambdabot.Serial,
                     Lambdabot.Error, Lambdabot.Url, Lambdabot.Process,
                     Lambdabot.Regex, Lambdabot.MiniHTTP, Lambdabot.AltTime,
                     Lambdabot.Pointful, Lambdabot.Parser, Lambdabot.Signals,
                     Lambdabot.Util
