name:                   lambdabot
version:                5.1.0.4

license:                GPL
license-file:           LICENSE

author:                 James Cook
maintainer:             James Cook <mokus@deepbondi.net>

category:               Development, Web
synopsis:               Lambdabot is a development tool and advanced IRC bot
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        It operates as a command line tool, embedded in an editor,
                        embedded in GHCi, via internet relay chat and on the web.

homepage:               https://wiki.haskell.org/Lambdabot
bug-reports:            https://github.com/lambdabot/lambdabot/issues

build-type:             Simple
cabal-version:          >= 1.8
tested-with:            GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.1

extra-source-files:     scripts/ghci.sh
                        scripts/genhaddock.sh
                        scripts/GenHaddock.hs
                        scripts/vim/bot
                        scripts/vim/pl
                        scripts/vim/README
                        scripts/vim/run
                        scripts/vim/runwith
                        scripts/vim/typeOf
                        Changelog
                        README.md

data-files:             scripts/online.rc,
                        scripts/passwd.rc.sample,
                        State/haddock,
                        State/Pristine.hs.706,
                        State/Pristine.hs.708,
                        State/Pristine.hs.default,
                        State/source,
                        State/vixen

source-repository head
  type:                 git
  location:             https://github.com/lambdabot/lambdabot.git

executable lambdabot
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:        Modules

  ghc-options:          -Wall -threaded
  build-depends:        base                         >= 3 && < 5,
                        lambdabot-core               >= 5.1.0.1 && < 5.2,
                        lambdabot-haskell-plugins    >= 5.1.0.1 && < 5.2,
                        lambdabot-irc-plugins        >= 5.1.0.1 && < 5.2,
                        lambdabot-misc-plugins       >= 5.1.0.1 && < 5.2,
                        lambdabot-novelty-plugins    >= 5.1.0.1 && < 5.2,
                        lambdabot-reference-plugins  >= 5.1.0.1 && < 5.2,
                        lambdabot-social-plugins     >= 5.1.0.1 && < 5.2,
                        mtl                          >= 2
