name:                   lambdabot
version:                5.3.1.1

license:                GPL
license-file:           LICENSE

author:                 James Cook
maintainer:             Naïm Favier <n@monade.li>

category:               Development, Web
synopsis:               Lambdabot is a development tool and advanced IRC bot
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        It operates as a command line tool, embedded in an editor,
                        embedded in GHCi, via internet relay chat and on the web.

homepage:               https://wiki.haskell.org/Lambdabot
bug-reports:            https://github.com/lambdabot/lambdabot/issues

build-type:             Simple
cabal-version:          >= 1.10
tested-with:            GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.4, GHC == 9.0.2, GHC == 9.2.4, GHC == 9.4.5

extra-source-files:     scripts/ghci.sh
                        scripts/genhaddock.sh
                        scripts/GenHaddock.hs
                        scripts/vim/bot
                        scripts/vim/pl
                        scripts/vim/README
                        scripts/vim/run
                        scripts/vim/runwith
                        scripts/vim/typeOf
                        Changelog
                        README.md

data-files:             scripts/online.rc,
                        scripts/passwd.rc.sample,
                        State/haddock,
                        State/Pristine.hs.default,
                        State/source,
                        State/vixen

source-repository head
  type:                 git
  location:             https://github.com/lambdabot/lambdabot.git

executable lambdabot
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:        Modules Paths_lambdabot

  ghc-options:          -Wall -threaded
  default-language:     Haskell98
  build-depends:        base                         >= 3 && < 5,
                        lambdabot-core               >= 5.3 && < 5.4,
                        lambdabot-haskell-plugins    >= 5.3 && < 5.4,
                        lambdabot-irc-plugins        >= 5.3 && < 5.4,
                        lambdabot-misc-plugins       >= 5.3 && < 5.4,
                        lambdabot-novelty-plugins    >= 5.3 && < 5.4,
                        lambdabot-reference-plugins  >= 5.3 && < 5.4,
                        lambdabot-social-plugins     >= 5.3 && < 5.4,
                        mtl                          >= 2
