name:                show
version:             0.4.1.2

license:             GPL
license-file:        LICENSE
author:              Lambdabot devs, Twan van Laarhoven <twanvl@gmail.com>
maintainer:          Lambdabot developers

stability:           Experimental
category:            Language
synopsis:            'Show' instances for Lambdabot
description:         This package provides ShowQ, ShowFun, and SimpleReflect.
                     .
                     ShowFun gives us Typeable instances for neutering IO expressions.
                     .
                     ShowQ adds SmallCheck & QuickCheck support.
                     .
                     And SimpleReflect allows us to literally see how functions 'expand',
                     through appropriate Show magic. See <http://twan.home.fmf.nl/blog/haskell/simple-reflection-of-expressions.details>.

build-type:          Simple
Cabal-Version:       >= 1.6
tested-with:         GHC==6.12.1

source-repository head
  type:     darcs
  location: http://code.haskell.org/lambdabot

Flag base4
 Description: Build with base-4
 Default: True

library
   exposed-modules:     ShowQ, ShowFun, SimpleReflect

   build-depends:       random, QuickCheck>=2.4, smallcheck>=0.4
   if flag(base4)
    build-depends:       base == 4.*, syb
   else
    build-depends:       base<4

   ghc-options:         -Wall
   ghc-prof-options:    -prof -auto-all
