name:                unlambda
version:             0.1.1

license:             GPL
license-file:        LICENSE
author:              Ørjan Johansen <oerjan@nvg.ntnu.no>
                     Don Stewart <http://www.cse.unsw.edu.au/~dons>
-- maintainer:          Cale

stability:           Stable
category:            Compilers/Interpreters
synopsis:            Unlambda interpreter
description:         This is an interpreter of the Unlambda language,
                     written in the pure, lazy, functional language Haskell.

build-type:          Simple
Cabal-Version:       >= 1.6
tested-with:         GHC==6.8.2

source-repository head
  type:     darcs
  location: http://code.haskell.org/lambdabot

executable              unlambda
   main-is:             Main.hs
   build-depends:       base>3 && <4, unix

library
   exposed-modules:     Language.Unlambda

   build-depends:       base>3 && <4, array, mtl

   ghc-options:         -Wall
   ghc-prof-options:    -prof -auto-all
