Name:		Djinn
Version:	2005.12.14
License:	BSD3
License-file:	LICENSE
Author:		Lennart Augustsson
Category:	source-tools
Homepage:	http://www.augustsson.net/Darcs/Djinn/
Synopsis:	A haskell proof generator
Build-Depends:	base, haskell98, mtl, readline

Executable:	djinn
Main-Is:	Djinn.hs
Other-modules:	Help, LJTParse, HCheck,  LJT, MLJT
		HTypes, LJTFormula, REPL,
		Util.Digraph, Util.Sort
