Name:            LambdaShell
Version:         0.1
License:         GPL
License-file:    LICENSE
Author:          Robert Dockins
Synopsis:        Simple shell for evaluating lambda expressions
Stability:       Alpha
Build-Depends:
    base >= 1.0,
    haskell98 >= 1.0,
    parsec >= 1.0,
    readline >= 1.0,
    Shellac >= 0.1

Executable:      labmdaShell
Main-Is:         main.hs
Hs-Source-Dir:
    src
Extensions:
    MultiParamTypeClasses
Extra-libraries:
    readline
GHC-Options: -O
